--- a/myProject01/myapp01/templates/board/list.html
+++ b/myProject01/myapp01/templates/board/list.html
@@ -7,11 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="{% static 'jquery-3.6.1.min.js' %}"></script>
 </head>
 
 <body>
-    <h3>LIST</h3>
-    <table>
+    <h3><a href="/list">LIST</a>({{boardCount}})</h3>
+    <div style="text-align: left;">
+        <a href="/write_form"> 추가하기</a>
+    </div>
+    <table style="text-align: center;">
         <thead>
             <tr>
                 <th>번호</th>
@@ -40,17 +44,72 @@
                 <td>{{ board.filename }}</td>
                 <td>
                     {% if board.filesize > 0 %}
-                    <span class="_ings">
+                    <span class="_imgs" data-url="/download_count?idx={{board.idx}}">
                         <img src="{% static 'images/file.jpg' %}">
                     </span>
                     {% endif %}
                 </td>
-                <td>{{ board.down }}</td>
+                <td class="downCnt">{{ board.down }}</td>
             </tr>
             <!-- for문 끝(django) -->
             {% endfor %}
         </tbody>
+
+        <script>
+            $("._imgs").on("click", function () {
+                _imgs = $(this)
+                $.ajax({
+                    type: "GET",
+                    url: $(this).attr("data-url"),
+                    success: function (data) {
+                        // alert(data.count)
+                        _imgs.parent().parent().find(".downCnt").text(data.count)
+                        // 다운로드 
+                        location.href = "/download?idx=" + data.idx
+                    }
+                })
+            })
+        </script>
     </table>
+    <br>
+    <form action="/list" method="get">
+        <select name="field" id="field">
+            <option value="title">제목</option>
+            <option value="writer">작성자</option>
+            <option value="content">내용</option>
+            <option value="all">제목+작성자+내용</option>
+            <!-- 지정한 option이 안 풀리는 설정 -->
+            <script>
+                // document.getElementById("field").value = "{{field}}"
+                $("#field").val("{{field}}")
+            </script>
+        </select>
+        <input type="text" name="word" placeholder="Search" value="{{word}}" />
+        <input type="submit" value="검색" />
+    </form>
+    <br><br>
+
+    <!-- &field={{field}}&word={{word}} 를 추가해줘야 검색할때도 페이지가 이상없이 작동됨-->
+    <!-- 이전 -->
+    {% if startPage > blockPage%}
+    <a href="?page={{startPage|add:-1}}&field={{field}}&word={{word}}">이전</a>
+    {% endif %}
+
+    <!-- 페이지 번호 -->
+    {% for i in range %}
+    {% if i == currentPage %}
+    {{i}}
+    {% else %}
+    <a href="?page={{i}}&field={{field}}&word={{word}}">{{i}}</a>
+    {% endif %}
+    {% endfor %}
+
+    <!-- 다음 -->
+    <!-- endPage|add:1  -> endPage + 1라는 의미 -->
+    {% if endPage < totPage%} <a href="?page={{endPage|add:1}}&field={{field}}&word={{word}}">다음</a>
+        {% endif %}
+
+
 </body>
 
 </html>
